--- a/app/src/main/res/layout/fragment_marina_manager_landing.xml
+++ b/app/src/main/res/layout/fragment_marina_manager_landing.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.LandingFragment">
+    tools:context=".view.MarinaManagerLandingFragment">
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="hello_blank_fragment" />
+        android:text="Hey marina manager!" />
 
     <Button
         android:id="@+id/logout_button"
