--- a/app/src/main/res/layout/custom_tab.xml
+++ b/app/src/main/res/layout/custom_tab.xml
@@ -3,6 +3,7 @@
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:id="@+id/tab"
+    android:textAlignment="center"
     android:textColor="@color/colorAccent"
     android:textSize="@dimen/tab_label"
     android:fontFamily="sans-serif"/>
