--- a/app/src/main/res/layout/fragment_marina_manager_landing.xml
+++ b/app/src/main/res/layout/fragment_marina_manager_landing.xml
@@ -1,10 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:orientation="vertical"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".view.MarinaManagerLandingFragment">
+
+    <android.support.design.widget.AppBarLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:theme="@style/WhiteTheme">
+
 
     <android.support.design.widget.TabLayout
         android:id="@+id/marina_manager_tabs"
@@ -12,6 +19,8 @@
         android:layout_height="72dp"
         app:tabMode="fixed"
         app:tabGravity="fill"/>
+
+    </android.support.design.widget.AppBarLayout>
 
     <android.support.v4.view.ViewPager
         android:id="@+id/marina_manager_view_pager"
@@ -21,4 +30,4 @@
         app:layout_behavior="@string/appbar_scrolling_view_behavior" />
 
 
-</RelativeLayout>
+</LinearLayout>
