Implement Boater Landing Page wiith ViewPager and Add signout for Boater

--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -26,18 +26,18 @@
             app:popExitAnim="@anim/slide_out_right" />
         <action
             android:id="@+id/boater_sign_in_action"
-            app:destination="@+id/boaterSearchResultsFragment"
+            app:destination="@id/boaterLandingFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
 
     </fragment>
     <fragment
         android:id="@+id/createAccountLandingFragment"
         android:name="com.navismart.navismart.view.SignUpFragment"
         android:label="fragment_create_account_landing"
-        tools:layout="@layout/fragment_signup" >
+        tools:layout="@layout/fragment_signup">
         <action
             android:id="@+id/marina_manager_register_successful_action"
             app:destination="@+id/landingFragment"
@@ -47,28 +47,25 @@
             app:popExitAnim="@anim/slide_out_right" />
         <action
             android:id="@+id/boater_register_successful_action"
-            app:destination="@id/boaterSearchResultsFragment"
+            app:destination="@id/boaterLandingFragment"
             app:enterAnim="@anim/slide_in_right"
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
-            app:popExitAnim="@anim/slide_out_right"/>
+            app:popExitAnim="@anim/slide_out_right" />
 
     </fragment>
     <fragment
         android:id="@+id/landingFragment"
         android:name="com.navismart.navismart.view.MarinaManagerLandingFragment"
         android:label="fragment_landing"
-        tools:layout="@layout/fragment_marina_manager_landing" >
-    <action
-        android:id="@+id/log_out_action"
-        app:destination="@+id/startFragment"
-        app:enterAnim="@anim/slide_in_left"
-        app:exitAnim="@anim/slide_out_right"
-        app:popEnterAnim="@anim/slide_in_right"
-        app:popExitAnim="@anim/slide_out_left" />
+        tools:layout="@layout/fragment_marina_manager_landing">
         <action
-            android:id="@+id/action_landingFragment_to_boaterProfileFragment"
-            app:destination="@id/boaterProfileFragment" />
+            android:id="@+id/log_out_action"
+            app:destination="@+id/startFragment"
+            app:enterAnim="@anim/slide_in_left"
+            app:exitAnim="@anim/slide_out_right"
+            app:popEnterAnim="@anim/slide_in_right"
+            app:popExitAnim="@anim/slide_out_left" />
         <action
             android:id="@+id/action_landingFragment_to_boaterSearchFragment"
             app:destination="@id/boaterSearchFragment" />
@@ -114,4 +111,20 @@
         android:name="com.navismart.navismart.view.CheckoutFragment"
         android:label="fragment_checkout"
         tools:layout="@layout/fragment_checkout" />
+    <fragment
+        android:id="@+id/boaterLandingFragment"
+        android:name="com.navismart.navismart.view.BoaterLandingFragment"
+        android:label="fragment_boater_landing"
+        tools:layout="@layout/fragment_boater_landing">
+        <action
+            android:id="@+id/action_boaterLandingFragment_to_boaterSearchResultsFragment"
+            app:destination="@id/boaterSearchResultsFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+        <action
+            android:id="@+id/boaterLogoutAction"
+            app:destination="@id/startFragment" />
+    </fragment>
 </navigation>
