--- a/app/src/main/res/layout/fragment_boater_landing.xml
+++ b/app/src/main/res/layout/fragment_boater_landing.xml
@@ -4,15 +4,22 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".view.BoaterLandingFragment"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    tools:context=".view.BoaterLandingFragment">
 
-    <android.support.design.widget.TabLayout
-        android:id="@+id/boater_tabs"
+    <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        app:tabGravity="fill"
-        app:tabMode="fixed" />
+        android:theme="@style/WhiteTheme">
+
+        <android.support.design.widget.TabLayout
+            android:id="@+id/boater_tabs"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:tabGravity="fill"
+            app:tabMode="fixed" />
+    </android.support.design.widget.AppBarLayout>
+
 
     <android.support.v4.view.ViewPager
         android:id="@+id/boater_view_pager"
