--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="background">#D0D3D4</color>
     <color name="white">#FFFFFF</color>
     <color name="goldenYellow">#FFDF00</color>
+    <color name="gray">#373737</color>
 </resources>
+
