--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -195,5 +195,18 @@
         android:id="@+id/viewBookingFragment"
         android:name="com.navismart.navismart.view.ViewBookingFragment"
         android:label="fragment_view_booking"
-        tools:layout="@layout/fragment_view_booking" />
+        tools:layout="@layout/fragment_view_booking">
+        <action
+            android:id="@+id/action_viewBookingFragment_to_writeReviewFragment"
+            app:destination="@id/writeReviewFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
+    </fragment>
+    <fragment
+        android:id="@+id/writeReviewFragment"
+        android:name="com.navismart.navismart.view.WriteReviewFragment"
+        android:label="fragment_write_review"
+        tools:layout="@layout/fragment_write_review" />
 </navigation>
