--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,5 +7,6 @@
     <color name="white">#FFFFFF</color>
     <color name="goldenYellow">#FFDF00</color>
     <color name="gray">#373737</color>
+    <color name="red">#EA030C</color>
 </resources>
 
