--- a/app/src/main/res/layout/fragment_marina_landing_activity.xml
+++ b/app/src/main/res/layout/fragment_marina_landing_activity.xml
@@ -5,10 +5,12 @@
     android:layout_height="match_parent"
     tools:context=".view.MarinaLandingActivityFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/marina_activity_recyclerview"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="Activity" />
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="20dp">
+    </android.support.v7.widget.RecyclerView>
 
 </FrameLayout>
