Add logout for marina manager

--- a/app/src/main/res/layout/fragment_marina_landing_more.xml
+++ b/app/src/main/res/layout/fragment_marina_landing_more.xml
@@ -95,6 +95,7 @@
         android:background="#ededed" />
 
     <Button
+        android:id="@+id/marina_logout_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center_horizontal"
