--- a/app/src/main/res/layout/fragment_boater_profile.xml
+++ b/app/src/main/res/layout/fragment_boater_profile.xml
@@ -71,14 +71,30 @@
                 android:layout_marginTop="5dp"
                 android:background="@color/colorPrimary" />
 
-            <TextView
+            <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:background="@color/colorPrimary"
-                android:text="@string/your_boats"
-                android:textAlignment="center"
-                android:textAppearance="@style/TextAppearance.AppCompat.Large"
-                android:textColor="@color/white" />
+                android:orientation="horizontal">
+
+                <TextView
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="@string/your_boats"
+                    android:textAlignment="center"
+                    android:textAppearance="@style/TextAppearance.AppCompat.Large"
+                    android:textColor="@color/white" />
+
+                <ImageView
+                    android:id="@+id/add_boat_icon"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginEnd="5dp"
+                    android:src="@drawable/ic_plus_white_24dp" />
+            </LinearLayout>
+
 
             <View
                 android:layout_width="match_parent"
