--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -74,7 +74,7 @@
         android:id="@+id/boaterProfileFragment"
         android:name="com.navismart.navismart.view.BoaterProfileFragment"
         android:label="fragment_boater_profile"
-        tools:layout="@layout/fragment_boater_profile" />
+        tools:layout="@layout/fragment_boater_profile"></fragment>
     <fragment
         android:id="@+id/boaterSearchFragment"
         android:name="com.navismart.navismart.view.BoaterSearchFragment"
@@ -151,6 +151,13 @@
             app:exitAnim="@anim/slide_out_left"
             app:popEnterAnim="@anim/slide_in_left"
             app:popExitAnim="@anim/slide_out_right" />
+        <action
+            android:id="@+id/action_boaterLandingFragment_to_addBoatFragment"
+            app:destination="@id/addBoatFragment"
+            app:enterAnim="@anim/slide_in_right"
+            app:exitAnim="@anim/slide_out_left"
+            app:popEnterAnim="@anim/slide_in_left"
+            app:popExitAnim="@anim/slide_out_right" />
     </fragment>
     <fragment
         android:id="@+id/currentBookingsFragment"
@@ -209,4 +216,9 @@
         android:name="com.navismart.navismart.view.WriteReviewFragment"
         android:label="fragment_write_review"
         tools:layout="@layout/fragment_write_review" />
+    <fragment
+        android:id="@+id/addBoatFragment"
+        android:name="com.navismart.navismart.view.AddBoatFragment"
+        android:label="fragment_add_boat"
+        tools:layout="@layout/fragment_add_boat" />
 </navigation>
