Implement Booking Upload form Checkout Fragment

--- a/app/src/main/res/layout/fragment_checkout.xml
+++ b/app/src/main/res/layout/fragment_checkout.xml
@@ -119,6 +119,7 @@
         android:layout_alignParentBottom="true"
         android:backgroundTint="@color/colorPrimary"
         android:text="@string/checkout"
+        android:enabled="false"
         android:textColor="@color/white" />
 
 </RelativeLayout>
