Add PlacePicker to BoaterSearchFragment and BoaterSearchResultsFragment

--- a/app/src/main/res/layout/fragment_boater_search.xml
+++ b/app/src/main/res/layout/fragment_boater_search.xml
@@ -34,6 +34,8 @@
                 android:layout_marginEnd="8dp"
                 android:layout_marginBottom="8dp"
                 android:baselineAligned="false"
+                android:enabled="true"
+                android:focusable="false"
                 android:hint="@string/location"
                 android:theme="@style/BaseLineTheme" />
         </android.support.design.widget.TextInputLayout>
