--- a/app/src/main/res/layout/fragment_boater_search_results.xml
+++ b/app/src/main/res/layout/fragment_boater_search_results.xml
@@ -88,12 +88,23 @@
             android:textColor="@color/colorPrimary" />
     </LinearLayout>
 
+    <TextView
+        android:id="@+id/no_results_display"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/order_by_layout"
+        android:layout_margin="50dp"
+        android:gravity="center"
+        android:text="@string/no_results_found"
+        android:visibility="gone" />
+
     <android.support.v7.widget.RecyclerView
         android:id="@+id/marina_search_result_recycler_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_below="@+id/order_by_layout"
         android:layout_margin="2dp"
-        android:scrollbars="vertical" />
+        android:scrollbars="vertical"
+        android:visibility="visible" />
 
 </RelativeLayout>
