--- a/app/src/main/res/layout/fragment_signup_marina_manager.xml
+++ b/app/src/main/res/layout/fragment_signup_marina_manager.xml
@@ -134,6 +134,12 @@
                 android:layout_marginBottom="5dp"
                 android:background="@color/colorPrimary" />
 
+
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/marina_pics_recycler_view"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"/>
+
             <android.support.design.widget.TextInputLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content">
