--- a/app/src/main/res/layout/date_change_dialog.xml
+++ b/app/src/main/res/layout/date_change_dialog.xml
@@ -10,11 +10,18 @@
         android:layout_above="@+id/button_layout"
         android:scrollbars="vertical">
 
-
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:orientation="vertical">
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/ic_close_black_24dp"
+                android:id="@+id/close_dialog"
+                android:layout_margin="8dp"
+                />
 
             <LinearLayout
                 android:layout_width="match_parent"
