--- a/app/src/main/res/layout/fragment_marina_landing_booking.xml
+++ b/app/src/main/res/layout/fragment_marina_landing_booking.xml
@@ -12,13 +12,13 @@
         android:layout_height="match_parent"
         android:orientation="vertical">
 
-        <CalendarView
+        <DatePicker
             android:id="@+id/marina_booking_calender"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:theme="@style/BaseLineTheme">
 
-        </CalendarView>
+        </DatePicker>
 
         <android.support.v7.widget.CardView
             android:id="@+id/marina_booking_stats_card"
@@ -58,7 +58,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="5dp"
-                            android:text="3"
+                            android:text="0"
                             android:textAlignment="center"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -81,7 +81,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="5dp"
-                            android:text="2"
+                            android:text="0"
                             android:textAlignment="center"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -117,7 +117,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="5dp"
-                            android:text="2"
+                            android:text="0"
                             android:textAlignment="center"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -140,7 +140,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="5dp"
-                            android:text="2"
+                            android:text="0"
                             android:textAlignment="center"
                             android:textStyle="bold" />
                     </LinearLayout>
@@ -163,7 +163,7 @@
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_margin="5dp"
-                            android:text="1"
+                            android:text="0"
                             android:textAlignment="center"
                             android:textStyle="bold" />
                     </LinearLayout>
