--- a/app/src/main/res/layout/fragment_marina_page.xml
+++ b/app/src/main/res/layout/fragment_marina_page.xml
@@ -171,6 +171,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/review_tab"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:layout_marginBottom="8dp"
@@ -192,14 +193,19 @@
                     android:layout_margin="5dp"
                     android:background="@android:color/darker_gray" />
 
-                <TextView
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/review_list"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:layout_marginStart="20dp"
-                    android:layout_marginTop="5dp"
-                    android:layout_marginEnd="20dp"
-                    android:layout_marginBottom="10dp"
-                    android:text="@string/lorem_ipsum" />
+                    android:layout_margin="8dp" />
+
+                <TextView
+                    android:id="@+id/see_more_reviews_text"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_margin="8dp"
+                    android:text="@string/see_more_reviews"
+                    android:textColor="@android:color/holo_blue_dark" />
 
             </LinearLayout>
 
