--- a/app/src/main/res/layout/marina_detail_layout.xml
+++ b/app/src/main/res/layout/marina_detail_layout.xml
@@ -119,7 +119,7 @@
             android:layout_marginTop="5dp"
             android:layout_marginEnd="5dp"
             android:layout_marginBottom="5dp"
-            android:background="@drawable/button_bg"
+            android:background="@drawable/button_bg_r24"
             android:text="@string/see_details"
             android:textAppearance="@style/TextAppearance.AppCompat.Small"
             android:textSize="14sp"
