--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,6 @@
     <color name="goldenYellow">#FFDF00</color>
     <color name="gray">#373737</color>
     <color name="red">#EA030C</color>
-    <color name="green">#00EA65</color>
+    <color name="green">#E3FEC7</color>
 </resources>
 
