--- a/app/src/main/res/layout/review_brick.xml
+++ b/app/src/main/res/layout/review_brick.xml
@@ -17,6 +17,7 @@
             android:layout_gravity="center"
             android:layout_margin="8dp"
             android:background="@drawable/circle"
+            android:textAlignment="center"
             android:textColor="@color/white" />
 
         <LinearLayout
@@ -46,7 +47,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_margin="15dp"
-            android:background="@drawable/rating_background_drawable" />
+            android:background="@drawable/rating_background_drawable"
+            android:textAlignment="center"
+            android:textColor="@color/white" />
 
     </LinearLayout>
 
